<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/contact_blocquer"
        android:title="@string/scontact_blocquer"
        app:showAsAction="never"/>
    <item
        android:id="@+id/marquer_lue"
        android:title="@string/marquer_lu"
        app:showAsAction="never"/>
    <item
        android:id="@+id/archiver"
        android:title="@string/archiver"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/rechecher"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>


</menu>