<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="3dp"
    app:cardElevation="0dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?selectableItemBackground"
    android:outlineAmbientShadowColor="@color/dark"
    android:outlineSpotShadowColor="@color/dark"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:id="@+id/request_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <TextView
            android:id="@+id/phone_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/nompersonne"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/request_image"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/user_status"
            android:textSize="15sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/request_image"
            app:layout_constraintTop_toBottomOf="@+id/phone_name" />

        <View
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/request_image"
            app:layout_constraintTop_toBottomOf="@+id/request_image" />

        <ImageButton
            android:id="@+id/phone_call"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ripple_drawable_call"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@+id/message"
            app:layout_constraintStart_toStartOf="@+id/separator"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/send_call" />

        <ImageButton
            android:id="@+id/message"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ripple_drawable_message"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toStartOf="@+id/details"
            app:layout_constraintStart_toEndOf="@+id/phone_call"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/send_message" />

        <ImageButton
            android:id="@+id/details"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ripple_drawable_info_contact"
            android:clickable="true"
            android:focusable="true"
            android:background="?selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/message"
            app:layout_constraintTop_toBottomOf="@+id/separator"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/details" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>