<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:gravity="center_vertical"
    tools:context=".activities.Confirm">

    <ImageView
        android:layout_marginBottom="10sp"
        android:layout_width="250sp"
        android:layout_height="100sp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <TextView
            android:id="@+id/phone_code_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/dark"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/send_code_msm" />

        <TextView
            android:id="@+id/not_mine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|italic"
            android:textAlignment="textEnd"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/number_done" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/time_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:paddingHorizontal="10dp" />
                <Button
                    android:id="@+id/resend_code_btn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/resend_code"
                    android:textAllCaps="false" />
            </LinearLayout>

        <TextView
            android:id="@+id/error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="#FF0000"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_text_border"
            android:layout_marginBottom="10sp"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:hint="@string/code_verification"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:maxLength="6"
            android:textSize="20sp"
            android:inputType="number"
            tools:ignore="Autofill,UnusedAttribute" />

        <Button
            android:id="@+id/send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/envoyer"
            android:layout_marginVertical="5dp"/>

</LinearLayout>