<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="3dp"
    app:cardElevation="0dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?selectableItemBackground"
    android:outlineAmbientShadowColor="@color/dark"
    android:outlineSpotShadowColor="@color/dark"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:weightSum="10"
        android:background="@color/bg_color"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/call_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/date"
            android:textSize="15sp"
            android:textColor="@color/gray"
            app:layout_constraintEnd_toStartOf="@+id/message_btn"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/call_name" />

        <TextView
            android:id="@+id/call_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/nom"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/message_btn"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/call_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:src="@drawable/ripple_drawable_call"
            android:contentDescription="@string/send_call"
            android:focusable="true"
            android:clickable="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/call_name"
            tools:ignore="NewApi" />

        <ImageButton
            android:id="@+id/message_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:src="@drawable/ripple_drawable_message"
            android:contentDescription="@string/send_message"
            android:clickable="true"
            android:focusable="true"
            android:background="?android:selectableItemBackgroundBorderless"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="@+id/call_btn"
            app:layout_constraintEnd_toStartOf="@+id/call_btn"
            app:layout_constraintTop_toTopOf="@+id/call_btn"
            tools:ignore="NewApi" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_account"
            android:contentDescription="@string/app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>

