<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginVertical="3dp"
    app:cardElevation="0dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?selectableItemBackground"
    android:outlineAmbientShadowColor="@color/dark"
    android:outlineSpotShadowColor="@color/dark"
    android:layout_height="wrap_content"
    tools:ignore="UnusedAttribute">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="@color/bg_color"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/call_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:background="?selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_call"
                android:contentDescription="@string/send_call" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/call_btn"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toTopOf="@+id/avatar" />

            <TextView
                android:id="@+id/user_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/dark"
                android:text="@string/nav_header_subtitle"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@+id/call_btn"
                app:layout_constraintStart_toEndOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_account"
                android:contentDescription="@string/profil_config" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>